fixed fals alignment of the word respecting the fixation cross

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -29,6 +29,7 @@ html, body
 
 #word
   font-size: 50px
+  height: 150px
 
 .retrieval_word
   @extend .text-center
